# aoc2024

./: CHANGELOG.md  LICENSE  README.md  Rakefile.rb  aoc2024.cabal
app/: Main.hs
src/: Cartesian2.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Parser.hs  Utils.hs
test/: Main.hs
test/Test/: Day12.hs
