cabal-version:       2.4
name:                aoc2024
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          Scott Sedgwick <scott.sedgwick@gmail.com>
copyright:           2024 Scott Sedgwick
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base
                     , parsers
                     , text
                     , trifecta
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Day01
                     , Day02
  other-modules:       Parser

executable aoc2024
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aoc2024
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite aoc2024-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aoc2024
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
