cabal-version:       2.4
name:                aoc2024
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          Scott Sedgwick <scott.sedgwick@gmail.com>
copyright:           2024 Scott Sedgwick
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 9.10.1

common common-options
  build-depends:       base
                     , containers
                     , parsers
                     , split
                     , text
                     , time
                     , trifecta
  default-extensions:  DerivingStrategies
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Day01
                     , Day02
                     , Day03
                     , Day04
                     , Day05
                     , Day06
  other-modules:       Parser
                     , Cartesian2
                     , Utils

executable aoc2024
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       aoc2024
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
